<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="alert_dialog_title">Alert</string>
    <string name="confirm_dialog_title">Confirmation</string>
    <string name="contact_config_screen_service_url_prompt">Contact service URI: </string>
    <string name="contact_input_invalid_prompt">Please select at least one contact!</string>
    <string name="contact_input_select_button_text">Select</string>
    <string name="contact_screen_search_text_hint">Find contacts</string>
    <string name="contactinput_maxnumber_alert">Number of recipients cannot exceeds </string>
    <string name="copyright">2007-2011 Anhe Innovation Technology (Beijing) Co.
		Ltd. All rights reserved.</string>
    <string name="file_explorer_file_not_wriable">is not accessible for write!</string>
    <string name="http_message_downloading">Downloading...</string>
    <string name="http_message_rendering">Rendering UI...</string>
    <string name="http_message_retrieving">Start loading...</string>
    <string name="http_message_uploading">Uploading...</string>
    <string name="http_message_waiting">Wait for response...</string>
    <string name="http_request_dialog_start_string">Start requesting...</string>
    <string name="information_dialog_title">Information</string>
    <string name="invalidate_main_url">Invalidate Services URI</string>
    <string name="json_config_screen_cache_default_expire">Default cache expire (hours):</string>
    <string name="json_config_screen_cache_enable">Enable cache</string>
    <string name="json_config_screen_cache_size">Cache size (bytes):</string>
    <string name="json_config_screen_purge_cache">Clean cache</string>
    <string name="json_config_screen_relay_enable">Use relay server</string>
    <string name="json_config_screen_relay_service_uri">Relay Service URI:</string>
    <string name="json_screen_invalid_url_prompt">Invalid URL: </string>
    <string name="json_screen_menu_about">About</string>
    <string name="json_screen_menu_back">Back</string>
    <string name="json_screen_menu_cancel_downloading">Cancel downloading</string>
    <string name="json_screen_menu_log_config">Log Configuration</string>
    <string name="json_screen_menu_options">Options</string>
    <string name="json_screen_menu_refresh">Refresh</string>
    <string name="json_screen_menu_show_source">Source MAGML</string>
    <string name="json_screen_menu_status">Device status</string>
    <string name="json_screen_retrieve_error_message">Network failure!</string>
    <string name="log_config_dialog_debug_level">Debug</string>
    <string name="log_config_dialog_error_level">Error</string>
    <string name="log_config_dialog_info_level">Information</string>
    <string name="log_config_dialog_log_dir_size">Log directory size (bytes): </string>
    <string name="log_config_dialog_log_directory">Log directory: </string>
    <string name="log_config_dialog_log_level">Log level:</string>
    <string name="log_config_dialog_trace_level">Trace</string>
    <string name="log_config_dialog_warning_level">Warning</string>
    <string name="login_failure">login failure!</string>
    <string name="logout_failure">Failed to Logout. Logout anyway?</string>
    <string name="mag_component_miss_attribute">misses attribute</string>
    <string name="mag_component_same_id">is duplicated!</string>
    <string name="mag_config_screen_attachment_download_dir">Attachment download directory: </string>
    <string name="mag_config_screen_attachment_service_uri">Attachment service URI: </string>
    <string name="mag_config_screen_bind_account">The client has been bound to account:</string>
    <string name="mag_config_screen_main_url">Services URI:</string>
    <string name="mag_config_screen_not_bind_account">The client is not bound to any account.</string>
    <string name="mag_config_screen_password_protect">Enable password protection after account binding.
	</string>
    <string name="mag_config_screen_push_protocol">Push protocol: </string>
    <string name="mag_config_screen_push_server_address">Push server address: </string>
    <string name="mag_config_screen_service_uri">Service URI: </string>
    <string name="mag_date_cancel">Cancel</string>
    <string name="mag_date_set">Set</string>
    <string name="mag_document_screen_logout_failure_prompt">Failed to communicate with server. Logout anyway?
	</string>
    <string name="mag_document_screen_password_protect_prompt">Please input password:</string>
    <string name="mag_document_screen_password_wrong_prompt">Wrong password!</string>
    <string name="mag_image_download_failed">Failed</string>
    <string name="mag_input_duplicator_cannot_be_empty_prompt">Please</string>
    <string name="mag_input_duplicator_exceed_max_prompt">The maximal allowed item count should be no more
		than</string>
    <string name="mag_input_duplicator_exceed_min_prompt">The minimal allowed item count should be no less
		than</string>
    <string name="mag_keywordrfilterselect_select_screen">Data is downloading...</string>
    <string name="mag_login_screen_check_alert_account">Please specify account!</string>
    <string name="mag_login_screen_default_title">Login</string>
    <string name="mag_login_screen_input_url_prompt">Please enter MAG service URL:</string>
    <string name="mag_screen_confirm_quit">Are you sure to quit?</string>
    <string name="mag_screen_menu_download_manager">Downloads</string>
    <string name="mag_screen_menu_logout">Logout</string>
    <string name="mag_screen_menu_show_debug_border">Show component border</string>
    <string name="mag_text_input_cannot_be_empty">Please fill in the </string>
    <string name="no_main_url">No Services URI!</string>
    <string name="screen_menu_bar_item_more">More</string>
    <string name="screen_menu_close">Close</string>
    <string name="son_config_screen_relay_service_uri">Relay service URI:</string>
    <string name="txt_attachment_dir">Attachment download directory:</string>
    <string name="txt_btn_check">remember this account</string>
    <string name="txt_btn_login">Login</string>
    <string name="txt_btn_no">No</string>
    <string name="txt_btn_quit">Quit</string>
    <string name="txt_btn_yes">Yes</string>
    <string name="txt_image_server_uri">Image service URI:</string>
    <string name="txt_log_level">Log level:</string>
    <string name="txt_login">Login</string>
    <string name="txt_passwd">Password:</string>
    <string name="txt_username">Account:</string>
    <string name="user_info_prompt_account">Account: </string>
    <string name="user_info_prompt_email">Email: </string>
    <string name="user_info_prompt_homephone">Phone (Home): </string>
    <string name="user_info_prompt_mobile">Mobile: </string>
    <string name="user_info_prompt_place">Place:</string>
    <string name="user_info_prompt_workphone">Phone (Work): </string>
    <string name="version">Mag for Android Version 1.0.0.0</string>
</resources>
