<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">

	<TableRow android:orientation="horizontal" android:paddingTop="10dip"
		android:layout_width="fill_parent" android:layout_height="wrap_content">

	</TableRow>
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:id="@+id/tv_log_dir"
		android:text="@string/log_config_dialog_log_directory"></TextView>
	<Button android:text="Button" android:id="@+id/bt_choose_log_dir"
		android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
	<TextView android:text="@string/log_config_dialog_log_level"
		android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	<CheckBox android:text="@string/log_config_dialog_error_level"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:id="@+id/cb_log_error"></CheckBox>
	<CheckBox android:text="@string/log_config_dialog_warning_level"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:id="@+id/cb_log_warning"></CheckBox>
	<CheckBox android:text="@string/log_config_dialog_trace_level"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:id="@+id/cb_log_trace"></CheckBox>
	<CheckBox android:text="@string/log_config_dialog_info_level"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:id="@+id/cb_log_info"></CheckBox>
	<CheckBox android:text="@string/log_config_dialog_debug_level"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:id="@+id/cb_log_debug"></CheckBox>

</TableLayout>
