<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:padding="10dip">
	<TextView android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:text="@string/mag_config_screen_not_bind_account"
		android:id="@+id/tv_bind_account"></TextView>
	<CheckBox android:text="@string/mag_config_screen_password_protect"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:id="@+id/cb_passwd_protect"></CheckBox>
	<TextView android:id="@+id/textView2" android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:text="@string/mag_config_screen_service_uri"></TextView>
	<EditText android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:id="@+id/et_service_uri"
		android:text="EditText"></EditText>
	<TextView android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/mag_config_screen_attachment_download_dir"
		android:id="@+id/tv_attachment_dir"></TextView>
	<TextView android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:text="@string/mag_config_screen_push_protocol"
		android:id="@+id/tv_push_protocol"></TextView>
	<TextView android:id="@+id/textView5" android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:text="@string/mag_config_screen_push_server_address"></TextView>
	<EditText android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:id="@+id/et_push_server"
		android:text="EditText"></EditText>
	<TextView android:id="@+id/textView1" android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/mag_config_screen_attachment_service_uri"></TextView>
	<EditText android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:text="EditText"
		android:id="@+id/et_attachment_uri"></EditText>
</TableLayout>
