<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="wrap_content">

	<TableRow android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">

		<TextView
		    android:id="@+id/tv_login_username"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center_vertical|right"
		    android:text="@string/txt_username"
		    android:textColor="#FFFFFFFF" />

		<EditText
		    android:id="@+id/et_username"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_margin="2dip"
		    android:layout_weight="1.0"
		    android:maxLength="20"
		    android:maxLines="1"
		    android:singleLine="true"
		    android:text="" />

	</TableRow>

	<TableRow android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">

		<TextView
		    android:id="@+id/tv_login_passwd"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center_vertical|right"
		    android:text="@string/txt_passwd"
		    android:textColor="#FFFFFFFF" />

		<EditText
		    android:id="@+id/et_passwd"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_margin="2dip"
		    android:layout_weight="1.0"
		    android:maxLength="20"
		    android:maxLines="1"
		    android:password="true"
		    android:singleLine="true"
		    android:text="" />

	</TableRow>

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">

		<CheckBox
		    android:id="@+id/btn_bind"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_margin="1dip"
		    android:layout_weight="1.0"
		    android:text="@string/txt_btn_check" />

	</LinearLayout>

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">

		<Button
		    android:id="@+id/btn_login"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_margin="2dip"
		    android:layout_weight="1.0"
		    android:text="@string/txt_btn_login" />

		<Button
		    android:id="@+id/btn_quit"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_margin="2dip"
		    android:layout_weight="1.0"
		    android:text="@string/txt_btn_quit" />

	</LinearLayout>
</TableLayout>